--- a/src/sytles/Chats.scss
+++ b/src/sytles/Chats.scss
@@ -8,8 +8,7 @@
   .main_section{
     ul{
       display: flex; 
-      flex-direction: column; 
-      
+      flex-direction: column;       
       border-top: 1px solid #ebebeb;
     }
   }
@@ -23,15 +22,20 @@
       align-items: center; 
       width: 60px; 
       height: 60px; 
-      background: #ffe84c; 
+      // background: #ffe84c; 
+      border: none;
+      background: #fff;
       border-radius: 50%;
       box-shadow: 0 2px 6px #0004; 
       font-size: 18px; 
-      color: #513736;
-      transition: color 300ms linear 0s, background 300ms linear 0s; 
+      // color: #513736;
+      color: #e7e7e7 ;
+      transition: color 300ms linear 0s, border 300ms linear 0s; 
     &:hover{
-      background: #513736; 
-      color: #ffe84c;
+      // background: #513736; 
+      color: #f00;
+      border: 1px solid rgb(255, 23, 23);
+      
     }
     }
   }
