--- a/src/sytles/Find.scss
+++ b/src/sytles/Find.scss
@@ -42,7 +42,7 @@ main{height: 85.8%;
       line-height: 22px; 
       text-indent: 15px; 
       color: #8e9399;
-      border: 1px solid yellow;
+      // border: 1px solid yellow;
     }
     ul{
       li{
