--- a/src/sytles/Header.scss
+++ b/src/sytles/Header.scss
@@ -3,6 +3,7 @@
 
 .header.profile_header{
   background: transparent;
+  border-bottom: 1px solid rgba($color: #fff, $alpha: 0.3);
 }
 
 .header.chatting_header{
@@ -42,7 +43,8 @@
   height: 64px; 
   display: flex; 
   flex-direction: column; 
-  background: #513736; 
+  // background: #513736; 
+  background: rgb(255, 0, 0);
   color: #fff;
   padding: 0 15px; 
   box-sizing: border-box; 
@@ -54,7 +56,7 @@
     height: 37.5%;
     div{
       flex: 1; 
-      border: 1px solid red;
+      // border: 1px solid red;
       &:nth-child(1){text-align: left;}
       &:nth-child(2){text-align: center;}
       &:nth-child(3){text-align: right;}
@@ -69,7 +71,7 @@
     *{
       flex: 1; 
       font-size: 16px; 
-      border: 1px solid red;
+      // border: 1px solid red;
     }
     h1{
       order: 2; 
