--- a/src/sytles/Auth.scss
+++ b/src/sytles/Auth.scss
@@ -1,18 +1,24 @@
 @import url(reset.css);
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Orbitron&display=swap');
+
 
 .auth{
  display: flex; align-items: center; justify-content: center;  flex-direction: column;
   width: 100%;
   height: 100%;
-  background:rgb(255, 191, 205);
+  // background: linear-gradient(rgb(255, 170, 170), #ffbed2) ;
+  background: rgb(255, 255, 255);
+  
 
  
   .kakaoLogo{
     position: relative;
     margin-bottom: 40px;
-    color: #fff;
-    font-size: 48px;
-    font-weight: bold;  
+    // color: rgb(255, 10, 10);
+    color: rgb(243, 0, 0);
+    font-size: 64px;
+    font-weight: bold;
+    font-family: 'Josefin Sans', sans-serif;  
 
   }
   // .kakaoLogo::after{
@@ -43,19 +49,21 @@
   form{
     input{
       display: block; 
-      border: none; 
+      border: 1px solid red; 
+      // border: none;
       border-radius: 80px;
       height: 40px; 
       width: 280px;
       opacity: 80%;
+      // box-shadow: 1px 1px 10px #fff ;
     &:first-child{
       // border-bottom: 1px solid #eee; 
       margin-bottom: 8px;
     }
     &:last-child{
-      margin-top: 16px; 
+      margin-top: 16px; color: red;
     }
-    &::placeholder{padding-left: 16px;}
+    &::placeholder{padding-left: 16px; color: #f00; opacity: 50%;}
     }
     .authError{
       color: #f00;
@@ -64,20 +72,44 @@
   }
   span{
     padding: 8px;
-    margin-bottom: 40px;
+    margin-top: 8px;
+    margin-bottom: 80px;
+    color:rgb(153, 153, 153);
+    // font-weight: bold;
+    font-size: 12px;
+
+    &:hover{
+      color: #000;
+    }
   }
   .socialLog{
+    display: flex;
+    
     button{
+      
+      cursor: pointer;
       display: block;
-      width: 280px;
+      width: 160px;
       height: 40px;
       border: none;
-      background: #eee;
-      color: #513736;
-      margin-bottom: 16px;
+      // border-radius: 40px;
+      // background: #ffe9e9;
+      background: none;
+      color: red;
+      margin: 4px;
+     
+      opacity: 60%;
+
+      &:hover{
+        opacity: 100%;
+      }
 
       
+       button:first-of-type{
         svg{
+        
+       } 
+          
           
         }
       
