--- a/src/sytles/Tabbar.scss
+++ b/src/sytles/Tabbar.scss
@@ -6,7 +6,8 @@
   width: 100%; 
   height: 6.4%;
   min-height: 54px; 
-  border-top: 1px solid #c1c1c1; 
+  // border-top: 1px solid #c1c1c1;
+  box-shadow: -20px 0px 5px -2px rgb(199, 199, 199);
   background-color: #f7f7f7;
   ul{
     display: flex; 
@@ -16,7 +17,7 @@
       flex: 1; 
       text-align: center;
       transition: transform 500ms linear 0s; 
-      border: 1px solid red;
+      // border: 1px solid red;
       &:hover{
         transform: scale(1.1);
          
@@ -28,7 +29,9 @@
         color:#c0c1c2;
 
         &.on{
-          color: brown;
+            
+            color: #ff1100;
+          
         }
 
  
